@@ -1,3 +1,10 @@
+Mon Jul 11 00:39:05 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * examples/APG/ThreadPools/Futures.cpp (class Manager): 
+        * examples/APG/Containers/Stacks.cpp (StackExample::run): 
+        * examples/APG/Containers/Allocator.cpp (StackExample::run): 
+        * examples/APG/Timers/PCB.cpp (PCB::handleClose): Fixed a mismatch in ACE_TRACE.
+
 Sat Jul  9 19:07:20 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * ace/RB_Tree.inl,
